--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
           </li  class="cabecalho-lista-item">estudante</li>
          </ul>
     </header>
+     <section>
    <div>
-        <h1>Sobre a escola  </h1>
+        <h2 class="escola-titulo">Sobre a escola</h2>
+        <p class="escola-titulo-um"></p>
+        <P class=" escola-titulo=dois"></P>
 
          A escola alura foi fundada em 2010 com o objetivo de ensinas programação através da Vscode.
          A melhor turma  do colégeio é o 2c malvadeza,uma classe engajada, ás vezes bagunceira, mas que entrega bons resultado.
    </div>
+     </section>
 </body>
 </html>
     
